--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 	<head>
+		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 		<title>Giphy Search Engine</title>
 		<link rel="stylesheet" href="css/main.css">
 	</head>
